--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,10 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# manually added
+.DS_Store
+**/.DS_Store
+**/node_modules/
+**/data/
+**/package-lock.json
