--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/laidrivm/aTES-Schema-Registry/issues"
   },
-  "homepage": "https://github.com/laidrivm/aTES-Schema-Registry#readme"
+  "homepage": "https://github.com/laidrivm/aTES-Schema-Registry#readme",
+  "dependencies": {
+    "ajv": "^8.12.0",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7"
+  }
 }
